Update and rename README.md to 개발 새발 정리  노트.md

--- a/개발 새발 정리  노트.md
+++ b/개발 새발 정리  노트.md
@@ -65,5 +65,8 @@ https://github.com/material-components/material-components-android/issues/704
                 
                 
 
-        
+
+
+안드로이드 앱 개발 : 임재성
+서버 및 데이터베이스 개발 : 김나경
  
